OCLOMRS-335: Fix 'Take me back home' alignment (#250)

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -96,7 +96,7 @@
 .btn-not-found {
   background-color: #495056;
   border-color: white;
-  margin-bottom: -287% !important;
+  margin-bottom: -310% !important;
 }
 .error-template {
   margin-top: 10px !important;
